[gd_scene load_steps=6 format=3 uid="uid://d3itbo4eksw1g"]

[ext_resource type="Script" path="res://game/core/toolbox_item.gd" id="1_3w5fw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqpcj"]
bg_color = Color(0.419608, 0.129412, 0.658824, 1)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_b83oe"]

[sub_resource type="Animation" id="Animation_6ssf6"]
resource_name = "flashing_overlay"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.784314), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_in1av"]
_data = {
"flashing_overlay": SubResource("Animation_6ssf6")
}

[node name="ToolboxItem" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = -1126.0
offset_bottom = -860.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_3w5fw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(1, 1, 1, 0.909804)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="MoreInfoButton" type="Button" parent="HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_rqpcj")
text = "  ?  "

[node name="TitleLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
theme_override_font_sizes/font_size = 20
text = "Bumper (circle)"
text_overrun_behavior = 4

[node name="DescriptionLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
theme_override_font_sizes/font_size = 14
text = "This is a long test description of a component that spans multiple lines up to a maximum of 2 lines before it stops showing more data."
autowrap_mode = 2
max_lines_visible = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/MarginContainer2/AspectRatioContainer"]
layout_mode = 2
color = Color(0.0666667, 0.0666667, 0.0666667, 0.196078)

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2/AspectRatioContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/MarginContainer2/AspectRatioContainer/MarginContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0.921569)

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2/AspectRatioContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer2/AspectRatioContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_b83oe")
expand_mode = 1
stretch_mode = 5

[node name="OverlayAlreadyUsed" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 2
color = Color(0.933333, 0.933333, 0.933333, 1)

[node name="MarginContainer" type="MarginContainer" parent="OverlayAlreadyUsed"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 4

[node name="UnlocksAtLabel" type="Label" parent="OverlayAlreadyUsed/MarginContainer"]
self_modulate = Color(0.0980392, 0.0980392, 0.0980392, 0.784314)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.717647, 0.717647, 0.717647, 1)
theme_override_font_sizes/font_size = 20
text = "âœ”"
horizontal_alignment = 1
vertical_alignment = 2

[node name="OverlayUnlocksAt" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
color = Color(0.105882, 0.105882, 0.105882, 0.960784)

[node name="CenterContainer" type="CenterContainer" parent="OverlayUnlocksAt"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UnlocksAtLabel" type="Label" parent="OverlayUnlocksAt/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.717647, 0.717647, 0.717647, 1)
theme_override_font_sizes/font_size = 20
text = "Unlocks at level X"

[node name="OverlayJustUnlocked" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.886038)
layout_mode = 2
mouse_default_cursor_shape = 2
color = Color(0.0666667, 0.0666667, 0.0666667, 1)

[node name="ColorRect" type="ColorRect" parent="OverlayJustUnlocked"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.0666667, 0.0666667, 0.392157)

[node name="CenterContainer" type="CenterContainer" parent="OverlayJustUnlocked"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="OverlayJustUnlocked/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.196078, 0.784314, 0.196078, 1)
theme_override_font_sizes/font_size = 20
text = "Proceed to next level to use new component!"

[node name="UnlockAnimationPlayer" type="AnimationPlayer" parent="OverlayJustUnlocked"]
unique_name_in_owner = true
autoplay = "flashing_overlay"
libraries = {
"": SubResource("AnimationLibrary_in1av")
}

[connection signal="pressed" from="HBoxContainer/MarginContainer/MoreInfoButton" to="." method="_on_more_info_button_pressed"]
[connection signal="gui_input" from="OverlayJustUnlocked" to="." method="_on_overlay_just_unlocked_gui_input"]
